--- a/source/packages/package-a/composer.json
+++ b/source/packages/package-a/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "your-monorepo/first-package",
+    "name": "maxmeffert/php-monorepo-test-package-a",
     "require": {
         "php": "^7.2",
         "symfony/http-kernel": "^5.0"
     },
     "autoload": {
         "psr-4": {
-            "YourMonorepo\\FirstPackage\\": "src"
+            "PhpMonorepoTest\\PackageA\\": "src"
         }
     }
 }
