--- a/source/packages/package-b/composer.json
+++ b/source/packages/package-b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "your-monorepo/second-package",
+    "name": "maxmeffert/php-monorepo-test-package-b",
     "require": {
         "php": "^7.2",
         "symfony/dependency-injection": "^5.0"
     },
     "autoload": {
         "psr-4": {
-            "YourMonorepo\\SecondPackage\\": "src"
+            "PhpMonorepoTest\\PackageB\\": "src"
         }
     }
 }
