added dummy versions

--- a/source/composer.json
+++ b/source/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "maxmeffert/php-monorepo-test",
+    "version": "1.0.0",
     "require": {
         "php": "^7.2",
         "symfony/dependency-injection": "^5.0",
