--- a/source/composer.json
+++ b/source/composer.json
@@ -2,9 +2,9 @@
     "name": "maxmeffert/php-monorepo-test",
     "version": "1.0.0",
     "require": {
-        "php": "^7.2",
-        "symfony/dependency-injection": "^5.0",
-        "symfony/http-kernel": "^5.0"
+        "php": "^7.2 | ^8.0",
+        "symfony/dependency-injection": "^6.0",
+        "symfony/http-kernel": "^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
